--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "compile": "tsc -p ./",
     "compile-web": "webpack",
     "package-web": "webpack --mode production --devtool hidden-source-map",
+    "watch-web": "webpack --watch",
     "vscode:prepublish": "npm run package-web",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
