--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reflowlist",
-  "version": "0.5.2",
+  "version": "0.6.1",
   "publisher": "google",
   "engines": {
     "vscode": "^1.46.0"
@@ -11,10 +11,18 @@
   "homepage": "http://github.com/google/reflow-list",
   "repository": "https://github.com/google/reflow-list",
   "categories": [
-     "Formatters"
+    "Formatters"
   ],
-  "keywords": ["reflow", "reformat", "paragraph", "bulleted list", "numbered list"],
+  "keywords": [
+    "reflow",
+    "reformat",
+    "paragraph",
+    "bulleted list",
+    "numbered list"
+  ],
   "main": "./out/extension.js",
+  "browser": "./dist/web/extension.js",
+  "extensionKind": ["ui", "workspace"],
   "activationEvents": [
     "onCommand:reflowlist.reflowParagraph"
   ],
@@ -62,12 +70,16 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
+    "compile-web": "webpack",
+    "package-web": "webpack --mode production --devtool hidden-source-map",
+    "watch-web": "webpack --watch",
+    "vscode:prepublish": "npm run package-web",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ."
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -80,6 +92,15 @@
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0"
+    "vscode-test": "^1.5.0",
+    "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "@types/webpack-env": "^1.16.3",
+    "assert": "^2.0.0",
+    "nodejs": "^0.0.0",
+    "process": "^0.11.10",
+    "ts-loader": "^9.2.6",
+    "vsce": "^2.6.3"
   }
 }
