Mark reflowlist.wrapColumn setting as language-overridable
This prevents a warning in the settings JSON editor.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
         "reflowlist.wrapColumn": {
           "type": "integer",
           "default": 0,
-          "description": "What column to wrap at.  If 0, then we use editor.wordWrapColumn."
+          "description": "What column to wrap at.  If 0, then we use editor.wordWrapColumn.",
+          "scope": "language-overridable"
         },
         "reflowlist.extraIndentForDescriptionList": {
           "type": "integer",
